# work_vision

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
Segment anything model search/: rospy_sam_detection.py  sam__container.py  sam_container_low_resolution.py  striped_tape.py  striped_tape_w_sam.py
config/: yolov8_params.yaml
launch/: container_detection.launch  container_detection_blue.launch  container_detection_red.launch  green_table_detec.launch  rs_vision.launch  strip_tape.launch  vision.launch  yolov8.launch
log/: latest_list
msg/: Description.msg  Description2D.msg  Description3D.msg  Recognitions.msg
rviz/: apriltag_ros.rviz  yolo.rviz
scripts/: container_detector_blue_node.py  container_detector_node.py  container_detector_py2.py  container_detector_red_node.py  container_detector_red_py2.py  green_table.py  image2world.py  striped_tape.py  striped_tape_w_sam.py  test_yolo.py  transform_tape.py  virtual_obstacle_publisher.py  yolov8_node.py
work_recognition/: CMakeLists.txt  package.xml  setup.py
work_recognition/launch/: astra_vision.launch  kinect_vision.launch  rs_vision.launch
work_recognition/scripts/work_recognition/yolov8_recognition/: yolov8_node.py
work_vision_msgs/: CMakeLists.txt  package.xml
