<?xml version="1.0"?>
<package format="2">
  <name>work_vision</name>
  <version>0.0.1</version>
  <description>Computer vision package for the Robotic Team FBOT@Work of RoboCup@Work.</description>

  <maintainer email="gabrieltlt721@gmail.com">Gabriel Torres Lima Teixeira</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Build export dependencies -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <!-- Exec (runtime) dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Outros pacotes usados -->
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>

  <!-- Dependência para leitura de parâmetros via YAML -->
  <exec_depend>rosparam</exec_depend>

  <export>
  </export>
</package>
