<?xml version="1.0"?>
<package format="2">
  <name>work_vision</name>
  <version>1.0.0</version>
  <description>
    Um metapacote para agrupar todos os pacotes de visão do projeto.
  </description>
  <maintainer email="gabrieltlt721@gmail.com">SGabriel Torres</maintainer>
  <license>MIT</license> <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>work_recognition</exec_depend>
  <exec_depend>work_vision_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>