<?xml version="1.0"?>
<package format="2">
  <name>work_vision</name>
  <version>0.0.1</version>
  <description>Computer vision package for the Robotic Team FBOT@Work of RoboCup@Work.</description>

  <maintainer email="gabrieltlt721@gmail.com">Gabriel Torres Lima Teixeira</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>rosparam</exec_depend>

  <export>
    </export>
</package>